# USB-TRI

./: I2S RP2040 SingleSided.kicad_pcb  I2S RP2040 SingleSided.kicad_prl  I2S RP2040 SingleSided.kicad_pro  README.md
Firmware/: CMakeLists.txt
Firmware/src/: CMakeLists.txt  main.cpp  pindefs.h  tusb_config.h  usb_descriptors.c
Firmware/src/pio/: i2s.pio  i2s.pio.h
PCB/: I2S RP2040 SingleSided.kicad_sch  IO.kicad_sch  fp-lib-table
